[package]
name = "monad-crypto"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-proto = { path = "../monad-proto" }

asn1_der = { workspace = true }
blake3 = { workspace = true }
blst = { workspace = true }
secp256k1 = { workspace = true, features = ["global-context", "recovery"] }
sha2 = { workspace = true }
zerocopy = { workspace = true }
zeroize = { workspace = true }

rcgen = { workspace = true, optional = true }
rustls = { workspace = true, optional = true, features = ["dangerous_configuration"] }

[dev-dependencies]
criterion = { workspace = true }
hex = { workspace = true }
tiny-keccak = { workspace = true, features = ["keccak"] }

[features]
monad_test = []
rustls = ["dep:rcgen", "dep:rustls"]

[[bench]]
name = "hasher_bench"
harness = false
