[package]
name = "monad-crypto"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-proto = { path = "../monad-proto" }

blake3 = { workspace = true }
sha2 = { workspace = true }
zerocopy = { workspace = true }
zeroize = { workspace = true }

ring = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
rustls = { workspace = true, optional = true, features = ["dangerous_configuration"] }
x509-parser = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
rustls = ["dep:ring", "dep:rcgen", "dep:rustls", "dep:x509-parser"]

[[bench]]
name = "hasher_bench"
harness = false
