[package]
name = "monad-crypto"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-proto = { workspace = true }

alloy-rlp = { workspace = true, features = ["derive"] }
blake3 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
sha2 = { workspace = true }
zerocopy = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "hasher_bench"
harness = false
