[package]
name = "monad-cxx"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-rlp = { workspace = true }
cxx = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

monad-eth-tx = { path = "../monad-eth-tx" }

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
autocxx-build = { workspace = true }
cmake = { workspace = true }
