[package]
name = "monad-debug-node"
version = "0.1.0"
edition = "2021"


# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[[bin]]
name = "debug-node"
path = "src/main.rs"
bench = false

[dependencies]
monad-bls = { path = "../monad-bls" }
monad-consensus-types = { path = "../monad-consensus-types" }
monad-crypto = { path = "../monad-crypto" }
monad-executor-glue = { path = "../monad-executor-glue" }
monad-node-config = { path = "../monad-node-config" }
monad-secp = { path = "../monad-secp" }

clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
] }
tokio-util = { workspace = true, features = ["codec"] }
toml = { workspace = true }
