[package]
name = "monad-debug-node"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[[bin]]
name = "monad-debug-node"
bench = false

[dependencies]
monad-crypto = { workspace = true }
monad-executor-glue = { workspace = true }
monad-node-config = { workspace = true }
monad-secp = { workspace = true }

clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tokio-util = { workspace = true, features = ["codec"] }
toml = { workspace = true }
