[package]
name = "monad-debugger"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]
# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bin]]
name = "schema_gen"
bench = false

[dependencies]
monad-chain-config = { path = "../monad-chain-config" }
monad-consensus-types = { path = "../monad-consensus-types" }
monad-crypto = { path = "../monad-crypto" }
monad-executor-glue = { path = "../monad-executor-glue" }
monad-mock-swarm = { path = "../monad-mock-swarm" }
monad-router-scheduler = { path = "../monad-router-scheduler" }
monad-state-backend = { path = "../monad-state-backend" }
monad-testutil = { path = "../monad-testutil" }
monad-transformer = { path = "../monad-transformer" }
monad-types = { path = "../monad-types" }
monad-updaters = { path = "../monad-updaters" }
monad-validator = { path = "../monad-validator" }

async-graphql = { workspace = true }
console_error_panic_hook = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
hex = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["getrandom"]
