[package]
name = "monad-debugger"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]
# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bin]]
name = "schema_gen"
bench = false

[dependencies]
monad-chain-config = { workspace = true }
monad-consensus-types = { workspace = true }
monad-crypto = { workspace = true }
monad-eth-types = { path = "../monad-eth-types" }
monad-executor-glue = { workspace = true }
monad-mock-swarm = { workspace = true }
monad-router-scheduler = { workspace = true }
monad-state-backend = { workspace = true }
monad-testutil = { workspace = true }
monad-transformer = { workspace = true }
monad-types = { workspace = true }
monad-updaters = { workspace = true }
monad-validator = { workspace = true }

async-graphql = { workspace = true }
console_error_panic_hook = { workspace = true }
futures = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
hex = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["getrandom"]
