[package]
name = "monad-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
monad-consensus = { path = "../monad-consensus" }
monad-crypto = { path = "../monad-crypto", features = ["libp2p-identity"] }
monad-executor = { path = "../monad-executor", features = ["tokio"] }
monad-p2p = { path = "../monad-p2p", features = ["tokio"] }
monad-state = { path = "../monad-state", features = ["proto"] }

futures = { workspace = true }
libp2p = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
monad-testutil = { path = "../monad-testutil" }
monad-wal = { path = "../monad-wal" }

tempfile = { workspace = true }
