[package]
name = "monad-election"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-types = { path = "../monad-types" }
monad-consensus-types = { path = "../monad-consensus-types" }
monad-validator = { path = "../monad-validator" }

rand_chacha = { workspace = true }
rand = {workspace = true}

[dev-dependencies]
monad-crypto = { path = "../monad-crypto" }
monad-testutil = { path = "../monad-testutil" }
monad-consensus-types = { path = "../monad-consensus-types" }

test-case = { workspace = true }
