[package]
name = "monad-eth-block-policy"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
monad-consensus-types = { path = "../monad-consensus-types" }
monad-crypto = { path = "../monad-crypto" }
monad-eth-tx = { path = "../monad-eth-tx" }
monad-eth-types = { path = "../monad-eth-types" }
monad-state-backend = { path = "../monad-state-backend" }
monad-types = { path = "../monad-types" }

alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
itertools = { workspace = true }
sorted_vector_map = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }