[package]
name = "monad-eth-block-policy"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
monad-consensus-types = { path = "../monad-consensus-types" }
monad-crypto = { path = "../monad-crypto" }
monad-eth-txpool-types = { path = "../monad-eth-txpool-types" }
monad-eth-types = { path = "../monad-eth-types" }
monad-state-backend = { path = "../monad-state-backend" }
monad-types = { path = "../monad-types" }

alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
itertools = { workspace = true }
sorted_vector_map = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
monad-testutil = { path = "../monad-testutil" }

alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
