[package]
name = "monad-eth-block-policy"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-consensus-types = { workspace = true }
monad-crypto = { workspace = true }
monad-eth-txpool-types = { workspace = true }
monad-eth-types = { workspace = true }
monad-state-backend = { workspace = true }
monad-types = { workspace = true }

alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
itertools = { workspace = true }
sorted_vector_map = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
monad-testutil = { workspace = true }

alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
proptest = { workspace = true }
