[package]
name = "monad-eth-block-validator"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
monad-consensus-types = { path = "../monad-consensus-types" }
monad-eth-block-policy = { path = "../monad-eth-block-policy" }
monad-eth-types = { path = "../monad-eth-types" }
monad-eth-tx = { path = "../monad-eth-tx" }
monad-state-backend = { path = "../monad-state-backend" }

alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
reth-primitives = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
monad-eth-testutil = { path = "../monad-eth-testutil" }
