[package]
name = "monad-eth-block-validator"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
monad-consensus-types = { path = "../monad-consensus-types" }
monad-crypto = { path = "../monad-crypto" }
monad-eth-block-policy = { path = "../monad-eth-block-policy" }
monad-eth-types = { path = "../monad-eth-types" }
monad-state-backend = { path = "../monad-state-backend" }

alloy-consensus = { workspace = true, features = ["k256"] }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
monad-testutil = { path = "../monad-testutil" }
monad-eth-testutil = { path = "../monad-eth-testutil" }
