[package]
name = "monad-eth-ledger"
version = "0.1.0"
edition = "2021"

[lib]
# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[dependencies]
monad-consensus = { path = "../monad-consensus" }
monad-consensus-types = { version = "0.1.0", path = "../monad-consensus-types" }
monad-crypto = { version = "0.1.0", path = "../monad-crypto" }
monad-state-backend = { version = "0.1.0", path = "../monad-state-backend" }
monad-eth-tx = { version = "0.1.0", path = "../monad-eth-tx" }
monad-eth-types = { version = "0.1.0", path = "../monad-eth-types" }
monad-executor = { version = "0.1.0", path = "../monad-executor" }
monad-executor-glue = { version = "0.1.0", path = "../monad-executor-glue" }
monad-types = { version = "0.1.0", path = "../monad-types" }
monad-updaters = { version = "0.1.0", path = "../monad-updaters" }

alloy-rlp = { workspace = true }
futures = { workspace = true }
