[package]
name = "monad-eth-ledger"
version = "0.1.0"
edition = "2021"

[lib]
# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[dependencies]
monad-blocksync = { path = "../monad-blocksync" }
monad-consensus-types = { path = "../monad-consensus-types" }
monad-crypto = { path = "../monad-crypto" }
monad-eth-types = { path = "../monad-eth-types" }
monad-executor = { path = "../monad-executor" }
monad-executor-glue = { path = "../monad-executor-glue" }
monad-state-backend = { path = "../monad-state-backend" }
monad-types = { path = "../monad-types" }
monad-updaters = { path = "../monad-updaters" }

alloy-consensus = { workspace = true, features = ["k256"] }
futures = { workspace = true }
