[package]
name = "monad-eth-ledger"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-blocksync = { workspace = true }
monad-consensus-types = { workspace = true }
monad-crypto = { workspace = true }
monad-eth-types = { workspace = true }
monad-executor = { workspace = true }
monad-executor-glue = { workspace = true }
monad-metrics = { workspace = true }
monad-state-backend = { workspace = true }
monad-types = { workspace = true }
monad-updaters = { workspace = true }

alloy-consensus = { workspace = true, features = ["k256"] }
futures = { workspace = true }
