[package]
name = "monad-eth-testutil"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
monad-consensus-types = { path = "../monad-consensus-types" }
monad-crypto = { path = "../monad-crypto" }
monad-eth-block-policy = { path = "../monad-eth-block-policy" }
monad-eth-tx = { path = "../monad-eth-tx" }
monad-eth-types = { path = "../monad-eth-types" }
monad-multi-sig = { path = "../monad-multi-sig" }
monad-secp = { path = "../monad-secp" }
monad-types = { path = "../monad-types" }

alloy-primitives = { workspace = true }
async-channel = { workspace = true }
clap = { workspace = true, features = [ "derive" ] }
futures = { workspace = true }
rand = { workspace = true }
reth-primitives = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing = { workspace = true }
