[package]
name = "monad-eth-testutil"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
monad-consensus-types = { path = "../monad-consensus-types" }
monad-crypto = { path = "../monad-crypto" }
monad-eth-block-policy = { path = "../monad-eth-block-policy" }
monad-eth-types = { path = "../monad-eth-types" }
monad-secp = { path = "../monad-secp" }
monad-testutil = { path = "../monad-testutil" }
monad-types = { path = "../monad-types" }

alloy-consensus = { workspace = true, features = ["k256"] }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
alloy-json-rpc = { workspace = true }
alloy-rlp = { workspace = true }
alloy-rpc-client = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-transport = { workspace = true }
alloy-transport-http = { workspace = true, features = ["reqwest-rustls-tls"] }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing = { workspace = true, features = ["log", "std"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "std"] }
url = { workspace = true }
alloy-sol-macro = { workspace = true }
alloy-sol-types = { workspace = true }
dashmap = { workspace = true }
eyre = { workspace = true }
