[package]
name = "monad-eth-testutil"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-consensus-types = { workspace = true }
monad-crypto = { workspace = true }
monad-eth-block-policy = { workspace = true }
monad-eth-types = { workspace = true }
monad-secp = { workspace = true }
monad-testutil = { workspace = true }
monad-types = { workspace = true }

alloy-consensus = { workspace = true, features = ["k256"] }
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
alloy-json-rpc = { workspace = true }
alloy-network = { workspace = true }
alloy-rlp = { workspace = true }
alloy-rpc-client = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-rpc-types-trace = { workspace = true }
alloy-sol-macro = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-transport = { workspace = true }
alloy-transport-http = { workspace = true, features = ["reqwest-rustls-tls"] }
clap = { workspace = true, features = ["derive"] }
dashmap = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp = { workspace = true, features = ["metrics", "grpc-tonic"] }
opentelemetry-semantic-conventions = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing = { workspace = true, features = ["log", "std"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "std"] }
url = { workspace = true }
