[package]
name = "monad-eth-txpool-executor"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-chain-config = { workspace = true }
monad-consensus-types = { workspace = true }
monad-crypto = { workspace = true }
monad-eth-block-policy = { workspace = true }
monad-eth-txpool = { workspace = true }
monad-eth-txpool-ipc = { workspace = true }
monad-eth-txpool-types = { workspace = true }
monad-eth-types = { workspace = true }
monad-executor = { workspace = true }
monad-executor-glue = { workspace = true }
monad-secp = { workspace = true }
monad-state-backend = { workspace = true }
monad-types = { workspace = true }
monad-updaters = { workspace = true, features = ["tokio"] }

alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
pin-project = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
monad-eth-testutil = { workspace = true }

alloy-primitives = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
