[package]
name = "monad-eth-txpool-ipc"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-eth-txpool-types = { workspace = true }

alloy-consensus = { workspace = true }
alloy-rlp = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }
